# bitcoin-wallet

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/tests/: calculator.py  calculator.tcss
src/wallet/: __main__.py  wallet.css
src/wallet/screens/: __init__.py  dashboard.py  main_screen.py  overview.py  receive.py  send.py  transactions.py
src/wallet/screens/modals/: __init__.py  help_screen.py  modal_bar.py  receive_modal.py  send_modal.py  welcome_modal.py
src/wallet/screens/widgets/: __init__.py  balance.py  current_price.py  graph.py  labeled_input.py  recent_transactions.py  top_bar.py
src/wallet/services/: __init__.py  blockchain_info_client.py  coinbase_client.py  wallet.py
