[tool.poetry]
name = "BitcoinWallet"
version = "0.0.1"
description = "A bitcoin core wallet clone"
authors = ["Mario Hartman <hartmanmario at gmail dot com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "wallet", from = "src" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"

# textual and component libraries
textual = "==0.53.1"
rich = "==13.7.1"
textual-fastdatatable = "==0.7.1"
textual-textarea = "==0.11.3"

# click
click = "^8.1.3"
rich-click = "^1.7.1"

# other deps

# optional deps

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
textual-dev = "^1.0.1"

[tool.poetry.group.static.dependencies]
black = "^23.3.0"
ruff = ">=0.0.285"
mypy = "^1.2.0"
types-pygments = "^2.16.0.0"
pandas-stubs = "^2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-textual-snapshot = { git = "https://github.com/tconbeer/pytest-textual-snapshot.git", branch = "main" }
# extension tests require earlier version of duckdb.
duckdb = "==0.8.1"


[tool.poetry.extras]
s3 = ["boto3"]
postgres = ["harlequin-postgres"]
mysql = ["harlequin-mysql"]
odbc = ["harlequin-odbc"]
bigquery = ["harlequin-bigquery"]
trino = ["harlequin-trino"]
databricks = ["harlequin-databricks"]


# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true

[tool.pytest.ini_options]
markers = [
    "online: requeries internet connection (deselect with '-m \"not online\"')",
    "use_cache: override the autouse fixture the disables the buffer cache",
    "flaky_windows: likely to fail for no reason on windows."
]